--- a/T_Zoo_OB_Spect/MainPage.xaml
+++ b/T_Zoo_OB_Spect/MainPage.xaml
@@ -2,11 +2,25 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="T_Zoo_OB_Spect.MainPage"
-             xmlns:Controls="clr-namespace:T_Zoo_OB_Spect.Controls"
+             xmlns:CUIX="clr-namespace:T_Zoo_OB_Spect.Controls"
              >
 
     <Grid>
-        <Controls:OutbackAdventureFormView x:Name="AdventureForm" OnFormSubmit="OnFormSubmit"/>
+        <!--ADD MY CUSTOM BTN-->
+        <!--<StackLayout>
+            <CUIX:OutbackAdventureButton />
+            <CUIX:OutbackAdventureButton />
+            <CUIX:OutbackAdventureButton />
+            <CUIX:OutbackAdventureButton />
+            <CUIX:OutbackAdventureButton />
+        </StackLayout>-->
+
+        <!--CUSTOM FORM-->
+        <StackLayout>
+            <CUIX:MainPageHeader/>
+            <CUIX:OutbackAdventureButton/>
+            <CUIX:OutbackAdventureFormView x:Name="AdventureForm" OnFormSubmit="OnFormSubmitInMainPage"/>
+        </StackLayout>
     </Grid>
 
 </ContentPage>
