many changes for folders + demo for week 4.

--- a/T_Zoo_OB_Spect/MainPage.xaml
+++ b/T_Zoo_OB_Spect/MainPage.xaml
@@ -18,8 +18,9 @@
         <!--CUSTOM FORM-->
         <StackLayout>
             <CUIX:MainPageHeader/>
-            <CUIX:OutbackAdventureButton/>
+            <!--<CUIX:OutbackAdventureButton/>-->
             <CUIX:OutbackAdventureFormView x:Name="AdventureForm" OnFormSubmit="OnFormSubmitInMainPage"/>
+            <CUIX:Footer />
         </StackLayout>
     </Grid>
 
